CSS: Fixed header on mobile platforms

--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -182,17 +182,34 @@ footer {
     }
 }
 
-@media (max-width: 610px) {
+@media (max-width: 1000px) {
     .wrap {
         width: 95% !important;
     }
-    header nav {
-        display: block;
-        float: none;
-        width: 100%;
+}
 
-        a:first-child {
+@media (max-width: 620px) {
+    header {
+        nav {
+            display: block;
+            width: 100%;
+            margin-bottom: 20px;
+
+            a:first-of-type {
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 490px) {
+    header {
+        text-align: center;
+
+        nav a {
+            display: block;
             margin-left: 0;
         }
+
     }
 }
